fix initial sidenav jank on mobile

--- a/styles.css
+++ b/styles.css
@@ -295,6 +295,10 @@ hr {
     z-index: 2;
   }
 
+  .sidenav.hidden {
+    display: none;
+  }
+
   .sidenav.no-transition {
     transition: none;
   }
